<resources>
    <string name="app_name">SportTogether</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome">¡Welcome to SportTogether</string>

    <string name="tennis">Tennis</string>
    <string name="paddle">Paddle</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string-array name="sports_array">
        <item name="tennis">@string/tennis</item>
        <item name="paddle">@string/paddle</item>
        <item name="football">@string/football</item>
        <item name="basketball">@string/basketball</item>
    </string-array>

    <string name="complete_profile">Please, complete your profile</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="complete_profile_button">Complete Profile</string>
    <string name="delete">Delete</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="user_pass_error">User/Password incorrect</string>
    <string name="user_exists">User already exists</string>
    <string name="create_match_data_error">Insert all the required data</string>

    <string name="sorting_array_time">Time</string>
    <string name="sorting_array_sport">Sport</string>
    <string name="sorting_array_availability">Places available</string>
    <string-array name="sorting_array">
        <item name="sorting_array_time">@string/sorting_array_time</item>
        <item name="sorting_array_sport">@string/sorting_array_sport</item>
        <item name="sorting_array_availability">@string/sorting_array_availability</item>
    </string-array>
    <string name="sign_off_question">¿Sign off?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create_match_too_much_players">Too much players</string>
    <string name="welcome_user">Welcome</string>
    <string name="no_matches_available">No matches available</string>
    <string name="order_by">Order by:</string>
    <string name="create_match">Create Match</string>
    <string name="sport_selection">Select a sport</string>
    <string name="players_number">Number of players</string>
    <string name="set_number">Number of sets</string>
    <string name="player_number_team">Number of players (Team)</string>
    <string name="create">Create</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="individual">Individual</string>
    <string name="couples">Couples</string>
    <string name="best_of_3">Best of 3</string>
    <string name="best_of_5">Best of 5</string>
    <string name="team_1">TEAM 1</string>
    <string name="team_2">TEAM 2</string>
    <string name="team_join_question">Which team do yo want to join?</string>
    <string name="join">Join</string>
    <string name="leave">Leave match</string>


</resources>