<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background"
    tools:context=".ui.activities.LogInActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_loginguideline01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_loginguideline02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_loginguideline03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_loginguideline04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_loginguideline01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_loginguideline02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_loginguideline03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_loginguideline04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_loginguideline05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <ImageView
        android:id="@+id/returnImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/h_loginguideline02"
        app:layout_constraintEnd_toStartOf="@+id/v_loginguideline02"
        app:layout_constraintStart_toStartOf="@+id/v_loginguideline01"
        app:layout_constraintTop_toTopOf="@+id/h_loginguideline01"
        app:srcCompat="@drawable/ic_keyboard_backspace_white_18dp" />

    <TextView
        android:id="@+id/textView_username"
        android:layout_width="315dp"
        android:layout_height="51dp"
        android:layout_marginStart="18dp"
        android:text="@string/username"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/h_loginguideline03"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/h_loginguideline03" />

    <TextView
        android:id="@+id/user_exists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:text="@string/user_exists"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/editText_username"
        app:layout_constraintTop_toTopOf="@+id/h_loginguideline03" />

    <TextView
        android:id="@+id/textView_password"
        android:layout_width="315dp"
        android:layout_height="51dp"
        android:layout_marginStart="18dp"
        android:text="@string/password"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/h_loginguideline04"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/h_loginguideline04" />

    <Button
        android:id="@+id/login_button1"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:background="@drawable/registro_button"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/v_loginguideline04"
        app:layout_constraintStart_toStartOf="@+id/v_loginguideline03"
        app:layout_constraintTop_toTopOf="@+id/h_loginguideline05" />

</androidx.constraintlayout.widget.ConstraintLayout>